<resources>
    <string name="app_name">ARSpace</string>
    <string name="app_label">AR Space</string>
    <string name="title_home">Saved</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login">Already have an account? Login</string>
    <string name="sign_up_button">SIGN-UP</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="search_hint">Search Products</string>
</resources>
