<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp">

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="127dp"
            android:layout_height="123dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/logo"
            android:contentDescription="@string/logo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:singleLine="true" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/confirm_password"/>
    <TextView
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:id="@+id/login_button" android:contextClickable="false"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:clickable="true" android:textColor="#2180F3"
            app:layout_constraintHorizontal_bias="0.497" android:focusableInTouchMode="true"
            android:layout_marginBottom="168dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/sign_up_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/signup_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/login_button"
    />
    <EditText
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirm_password"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:hint="@string/confirm_password"
            android:autofillHints="@string/confirm_password"
            android:layout_marginBottom="104dp" app:layout_constraintBottom_toTopOf="@+id/signup_button"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:inputType="textPersonName|textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/email"
            app:layout_constraintHorizontal_bias="0.496" android:autofillHints="@string/email"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password"/>
</android.support.constraint.ConstraintLayout>