<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userID"
            android:singleLine="true" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.189" android:autofillHints="" android:hint="@string/user_id"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:singleLine="true" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:autofillHints="Password"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/userID" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/login_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="188dp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/password"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:id="@+id/signup_button" android:contextClickable="false"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:clickable="true" android:textColor="#2180F3"
            app:layout_constraintHorizontal_bias="0.497" android:focusableInTouchMode="true"
    />

</android.support.constraint.ConstraintLayout>